--- a/Help/html/M-FastMoq.Mocker.AddMock--1.htm
+++ b/Help/html/M-FastMoq.Mocker.AddMock--1.htm
@@ -127,7 +127,7 @@
 </div>
 </div>
 <div class="TreeItem">
-<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateInstanceNonPublic--1.htm" target="_self">CreateInstanceNonPublic(T) Method </a>
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.CreateInstanceNonPublic--1.htm" target="_self">CreateInstanceNonPublic(T) Method (Object[])</a>
 </div>
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="#">Overload:FastMoq.Mocker.CreateMock</a>
@@ -135,7 +135,13 @@
 </div>
 </div>
 <div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetArgData--1.htm" target="_self">GetArgData(T) Method (Nullable(Dictionary(Type, Nullable(Object))))</a>
+</div>
+<div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetList--1.htm" target="_self">GetList(T) Method </a>
+</div>
+<div class="TreeItem">
+<img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.GetMethodArgData.htm" target="_self">GetMethodArgData Method </a>
 </div>
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="#">Overload:FastMoq.Mocker.GetMock</a>
@@ -154,6 +160,11 @@
 </div>
 <div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.Initialize--1.htm" target="_self">Initialize(T) Method </a>
+</div>
+<div class="TreeNode">
+<img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="../Collapsed.png"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="Overload-FastMoq.Mocker.InvokeMethod-.htm" target="_self">InvokeMethod Method </a>
+<div class="Hidden">
+</div>
 </div>
 <div class="TreeItem">
 <img src="../Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="M-FastMoq.Mocker.RemoveMock--1.htm" target="_self">RemoveMock(T) Method </a>
@@ -208,7 +219,8 @@
             <div id="mainSection">
               <div id="mainBody">
                 <div class="summary">
-       Creates a <a href="T-FastMoq.MockModel.htm">MockModel</a> with the given <span class="nolink">[Mock]</span> with the option of overwriting an existing <a href="T-FastMoq.MockModel.htm">MockModel</a></div>
+       Creates a <a href="T-FastMoq.MockModel.htm">MockModel</a> with the given <span class="nolink">[Mock]</span> with the option of overwriting an existing
+       <a href="T-FastMoq.MockModel.htm">MockModel</a></div>
                 <p />
     <b>Namespace:</b> 
    <a href="N-FastMoq.htm">FastMoq</a><br />
@@ -228,8 +240,10 @@
 	<span class="nolink">Mock</span>&lt;T&gt;^ <span class="parameter">mock</span>, 
 	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="parameter">overwrite</span>, 
 	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="parameter">nonPublic</span>
-)</pre></div></div></div><h4 class="subHeading">Type Parameters</h4><dl><dt><span class="parameterItalic">T</span></dt><dd>The Mock <span class="nolink">Type</span>, usually an interface.</dd></dl><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="mock"><dt><span class="parameterItalic">mock</span></dt><dd>Type: <span class="nolink">Mock</span><span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="selflink"><span class="typeparam">T</span></span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span><br />Mock to Add.</dd></dl><dl paramName="overwrite"><dt><span class="parameterItalic">overwrite</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a><br />Overwrite if the mock exists or throw <span class="nolink">[ArgumentException]</span> if this parameter is
-   false.</dd></dl><dl paramName="nonPublic"><dt><span class="parameterItalic">nonPublic</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a><br />if set to <span class="code">true</span> uses public and non public constructors.</dd></dl></div><h4 class="subHeading">Return Value</h4><a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a>.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><span class="nolink">AddMock Overload</span></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
+)</pre></div></div></div><h4 class="subHeading">Type Parameters</h4><dl><dt><span class="parameterItalic">T</span></dt><dd>The Mock <span class="nolink">Type</span>, usually an interface.</dd></dl><div id="parameters"><h4 class="subHeading">Parameters</h4><dl paramName="mock"><dt><span class="parameterItalic">mock</span></dt><dd>Type: <span class="nolink">Mock</span><span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span><span class="selflink"><span class="typeparam">T</span></span><span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span><br />Mock to Add.</dd></dl><dl paramName="overwrite"><dt><span class="parameterItalic">overwrite</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a><br />
+       Overwrite if the mock exists or throw <span class="nolink">[ArgumentException]</span> if this parameter is
+       false.
+   </dd></dl><dl paramName="nonPublic"><dt><span class="parameterItalic">nonPublic</span></dt><dd>Type: <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">Boolean</a><br />if set to <span class="code">true</span> uses public and non public constructors.</dd></dl></div><h4 class="subHeading">Return Value</h4><a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a>.</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><span class="nolink">AddMock Overload</span></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
