--- a/Help/html/Properties.T-FastMoq.Mocker.htm
+++ b/Help/html/Properties.T-FastMoq.Mocker.htm
@@ -188,8 +188,9 @@
                       </td>
                       <td>
                         <div class="summary">
-       Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock <span class="nolink">[IFileSystem]</span> does
-   not use <span class="nolink">[MockFileSystem]</span> and uses <span class="nolink">[Mock]</span> of <span class="nolink">[IFileSystem]</span>.
+       Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock
+       <span class="nolink">[IFileSystem]</span> does
+       not use <span class="nolink">[MockFileSystem]</span> and uses <span class="nolink">[Mock]</span> of <span class="nolink">[IFileSystem]</span>.
    </div>
                       </td>
                     </tr>
